--- a/it_2022/src/main/webapp/WEB-INF/web.xml
+++ b/it_2022/src/main/webapp/WEB-INF/web.xml
@@ -8,10 +8,6 @@
   	<servlet-name>RegistrationServlet</servlet-name>
   	<display-name>RegistrationServlet</display-name>
   	<description></description>
-  	<servlet-class>servlets.RegistrationServlet</servlet-class>
+  	<servlet-class>controllers.RegistrationServlet</servlet-class>
   </servlet>
-  <servlet-mapping>
-  	<servlet-name>RegistrationServlet</servlet-name>
-  	<url-pattern>/RegistrationServlet</url-pattern>
-  </servlet-mapping>
 </web-app>
