--- a/it_2022/src/main/webapp/WEB-INF/web.xml
+++ b/it_2022/src/main/webapp/WEB-INF/web.xml
@@ -40,8 +40,37 @@
   	<description></description>
   	<servlet-class>controllers.LoguotServlet</servlet-class>
   </servlet>
-  <servlet-mapping>
-  	<servlet-name>LoguotServlet</servlet-name>
-  	<url-pattern>/LoguotServlet</url-pattern>
-  </servlet-mapping>
+  <servlet>
+  	<servlet-name>CookieServlet</servlet-name>
+  	<display-name>CookieServlet</display-name>
+  	<description></description>
+  	<servlet-class>controllers.CookieServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>UsersServlet</servlet-name>
+  	<display-name>UsersServlet</display-name>
+  	<description></description>
+  	<servlet-class>controllers.UsersServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>ErrorHandler</servlet-name>
+  	<display-name>ErrorHandler</display-name>
+  	<description></description>
+  	<servlet-class>controllers.ErrorHandler</servlet-class>
+  </servlet>
+  
+  <error-page>
+  <error-code>404</error-code>
+  <location>/error</location>
+  </error-page>
+    <error-page>
+  <error-code>403</error-code>
+  <location>/error</location>
+  </error-page>
+    <error-page>
+  <error-code>500</error-code>
+  <location>/error</location>
+  </error-page>
+  
+  
 </web-app>
